# contour-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml
.github/workflows/: build_test_ubuntu.yml
benches/: bench.rs
examples/: ex.rs
src/: area.rs  band.rs  contour.rs  contourbuilder.rs  error.rs  isoringbuilder.rs  lib.rs  line.rs
tests/fixtures/: issue18.json  pot_pop_fr.json  volcano.json
