[package]
name = "contour"
version = "0.10.0"
authors = ["Matthieu Viry <matthieu.viry@cnrs.fr>"]
edition = "2021"

description = "Compute isorings and contour polygons (using marching squares algorithm)."
repository = "https://github.com/mthh/contour-rs"
homepage = "https://github.com/mthh/contour-rs"
documentation = "https://docs.rs/contour"
readme = "README.md"
keywords = ["contour", "polygon", "isoring", "marching-squares", "geojson"]
license = "MIT OR Apache-2.0"

[dependencies]
geojson = { version = ">=0.16, <=0.24", optional = true }
geo-types= { version = "0.7" }
lazy_static = "1.0"
serde_json = { version = "^1.0", optional = true }
rustc-hash = "1.0"
slab = "0.4"

[dev-dependencies]
serde_json = "^1.0"

[features]
geojson = ["dep:geojson", "dep:serde_json"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "ex"
required-features = ["geojson"]
